# Lem-In

./: CMakeLists.txt  main.c
libft/: Makefile  ft_memalloc.c  ft_strdel.c  ft_strjoin.c  get_next_line.c  get_next_line.h  libft.h
printf/: printf.h
printf/srcs/basic/: ft_atoi.c  ft_get_data.c  ft_get_width.c  ft_isdigit.c  ft_memset.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strncpy.c  ft_strnew.c  ft_strsub.c
printf/srcs/char/: ft_aligning_char_sleva.c  ft_aligning_char_sprava.c  ft_aligning_char_uni_sleva.c  ft_aligning_char_uni_sprava.c
printf/srcs/hex/: ft_aligning_number_sleva_hex.c  ft_aligning_number_sleva_hex_b.c  ft_aligning_number_sprava_hex.c  ft_aligning_number_sprava_hex_b.c  ft_hash_hex.c  ft_hash_hex_b.c
printf/srcs/int/: ft_add_plus.c  ft_add_space.c  ft_aligning_number_sleva.c  ft_aligning_number_sprava.c  ft_output.c  ft_output_number.c  itoa_base.c
printf/srcs/octet/: ft_aligning_number_sleva_octet.c  ft_aligning_number_sprava_octet.c  ft_hash.c
printf/srcs/pointer/: ft_aligning_pointer_sleva.c  ft_aligning_pointer_sprava.c  ft_output_pointer.c
printf/srcs/string/: ft_alignin_string_sleva.c  ft_aligning_string_sprava.c
src/: lem-in.h
